--- a/index-START.html
+++ b/index-START.html
@@ -11,7 +11,7 @@
   <body>
     <script>
       const pressed = [];
-      const secretCode = "";
+      const secretCode = "cool123";
       window.addEventListener("keyup", (e) => {
         console.log(e.key);
         pressed.push(e.key);
