--- a/index-START.html
+++ b/index-START.html
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Key Detection</title>
-    <script
-      type="text/javascript"
-      src="https://www.cornify.com/js/cornify.js"
-    ></script>
-  </head>
-  <body>
-    <script>
-      const pressed = [];
-      const secretCode = "cool123";
-      window.addEventListener("keyup", (e) => {
-        console.log(e.key);
-        pressed.push(e.key);
-        pressed.splice(
-          -secretCode.length - 1,
-          pressed.length - secretCode.length
-        );
-        if (pressed.join("").includes(secretCode)) {
-          console.log("Ding! You got the code!");
-        }
-      });
-    </script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<title>Key Detection</title>
+		<script
+			type="text/javascript"
+			src="https://www.cornify.com/js/cornify.js"
+		></script>
+	</head>
+	<body>
+		<script>
+			const pressed = [];
+			const secretCode = '1234567';
+			window.addEventListener('keyup', (e) => {
+				console.log(e.key);
+
+				pressed.push(e.key);
+
+				pressed.splice(
+					-secretCode.length - 1,
+					pressed.length - secretCode.length
+				);
+
+				console.log(secretCode);
+				if (pressed.join('').includes(secretCode)) {
+					console.log('Ding! You got the code!');
+					cornify_add();
+				}
+			});
+		</script>
+	</body>
 </html>
